# Graph-Machine

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: MiniGL.cpp.D163D7024A8CA738.idx  MiniGL.hpp.678A932100549572.idx  RenderGlobals.cpp.EE1255B326C6BD67.idx  RenderGlobals.hpp.6EBC4AA3B936AF8E.idx  _fixes.hpp.D72290944BF3E905.idx  _vectorize.hpp.7686C75261FBE7A3.idx  common.hpp.CF2968EF27D4BBAA.idx  compute_common.hpp.DB467F8A22C3C14C.idx  compute_vector_relational.hpp.8F5C10B0E6363D87.idx  constants.hpp.F911030C54C15207.idx  constants.inl.8C72EB81483BBC73.idx  drawing.cpp.2BE089EE0C40D5C0.idx  drawing.hpp.EFA8FF8716BD7AE2.idx  epsilon.hpp.F0E7B244268C1892.idx  epsilon.inl.5706877501B15601.idx  exponential.hpp.6E5ACC93DABF77B5.idx  func_common.inl.1C975117950DD750.idx  func_exponential.inl.7B64D9269FE58F86.idx  func_geometric.inl.9D6565E0B22E38F6.idx  func_integer.inl.8029FFE62C366A23.idx  func_matrix.inl.5425E93EB5458240.idx  func_packing.inl.614CE7E39E995339.idx  func_trigonometric.inl.420FC4BB48A33F7C.idx  func_vector_relational.inl.55A0448A4891380A.idx  fwd.hpp.C5CCDBD9262B94B9.idx  geometric.hpp.9AEED172599771E4.idx  glad.c.C9E8AF0B5CEAED7E.idx  glad.h.CF71D00635A1984B.idx  glm.hpp.3F6786B9FECD5F93.idx  graph_maker.cpp.673D6D739533D478.idx  graph_maker.hpp.FCDAC56F1DF8CAB9.idx  input.cpp.CDA265B99B60E4A8.idx  input.hpp.0587091C8AE1AC60.idx  integer.hpp.EDCBB0D60C44EC85.idx  khrplatform.h.ECBAD85A37B0550B.idx  main.cpp.D9625DAE64AF508C.idx  main.cpp.F47A69A7A1A2E206.idx  mat2x2.hpp.EC4144A925C9DA05.idx  (+162 more)
include/: graph_maker.hpp
src/: graph_maker.cpp  main.cpp
